Added auth config
